Fixing issue - name of property is incorrect.

--- a/kprocessor/src/main/resources/application.properties
+++ b/kprocessor/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.cloud.stream.bindings.input.destination=processor
 spring.cloud.stream.bindings.input.group=processor
 spring.cloud.stream.bindings.input.binder=rabbit
 
-spring.cloud.stream.bindings..output.destination=sink
+spring.cloud.stream.bindings.output.destination=sink
 spring.cloud.stream.bindings.output.binder=kafka
 
 spring.cloud.stream.kafka.binder.auto-add-partitions=true
